[package]
name = "swap-io-clmm-jupiter"
version = "0.1.0"
edition = "2021"
description = "Swap.io CLMM integration for Jupiter Aggregator"
license = "MIT"
repository = "https://github.com/swap-dot-io/swap-io-clmm-rust-sdk"
readme = "README.md"
resolver = "2"

[dependencies]
jupiter-amm-interface = "=0.5.0"
solana-sdk = "<1.17"
anyhow = "1.0"
solana-program = "~2.2"