[package]
name = "swap-io-clmm-rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
spl-memo = "=4.0.0"
solana-sdk = "=1.16.25"
anchor-lang = "0.29.0"
rust_decimal = "1.37.1"
solana-client = "=1.16.25"
spl-token = { version = "=4.0.0", features=["no-entrypoint"] }
spl-token-2022 = { version = "=0.9.0", features = ["no-entrypoint"]}
bytemuck = { version = "1.19.0", features = ["derive", "min_const_generics"] }
swap-io-clmm = {git = "https://github.com/swap-dot-io/swap-io-clmm", features = ["no-entrypoint", "client"]}